--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -155,68 +155,82 @@
     <div class="form-round-block hide" id="require-block-1">
         <table id="require-auto-data-first">
             <tr>
-                <td>{{ s1_form.model.label }}</td>
+                <td>
+                    {{ s1_form.model.label }}
+                    <span class="table-error">{{ s1_form.model.errors }}</span>
+                </td>
+
                 <td class="visible-data second"></td>
                 <td class="ajax-select">
                     {{ s1_form.model }}
-                    {{ s1_form.model.errors }}
                 </td>
             </tr>
             <tr>
-                <td>{{ s1_form.model_year.label }}</td>
+                <td>
+                    {{ s1_form.model_year.label }}
+                     <span class="table-error">{{ s1_form.model_year.errors }}</span>
+                </td>
                 <td class="visible-data second"></td>
                 <td class="ajax-select">
                     {{ s1_form.model_year }}
-                    {{ s1_form.model_year.errors }}
                 </td>
             </tr>
             <tr>
-                <td>{{ s1_form.power.label }}</td>
+                <td>
+                    {{ s1_form.power.label }}
+                     <span class="table-error">{{ s1_form.power.errors }}</span>
+                </td>
                 <td class="visible-data second"></td>
                 <td class="ajax-select">
                     {{ s1_form.power }}
-                    {{ s1_form.power.errors }}
                 </td>
             </tr>
             <tr>
-                <td>{{ s1_form.price.label }}</td>
+                <td>
+                    {{ s1_form.price.label }}
+                     <span class="table-error">{{ s1_form.price.errors }}</span>
+                </td>
                 <td class="second">
                     {{ s1_form.price }}
                     <div id="price-slider"></div>
                     <span id="stoim"></span>
-                    {{ s1_form.price.errors }}
                 </td>
                 <td>
                 </td>
             </tr>
             <tr>
-                <td>{{ s1_form.wheel.label }}</td>
+                <td>
+                    {{ s1_form.wheel.label }}
+                    <span class="table-error">{{ s1_form.wheel.errors }}</span>
+                </td>
                 <td class="visible-data second"></td>
                 <td>
                     {{ s1_form.wheel }}
-                    {{ s1_form.wheel.errors }}
                 </td>
             </tr>
             <tr>
-                <td>{{ s1_form.city.label }}</td>
+                <td>
+                    {{ s1_form.city.label }}
+                    <span class="table-error">{{ s1_form.city.errors }}</span>
+                </td>
                 <td class="visible-data second"></td>
                 <td>
                     {{ s1_form.city }}
-                    {{ s1_form.city.errors }}
                 </td>
             </tr>
             <tr>
-                <td>{{ s1_form.credit.label }}</td>
+                <td>
+                    {{ s1_form.credit.label }}
+                    <span class="table-error">{{ s1_form.credit.errors }}</span>
+                </td>
                 <td class="visible-data second">
                     <div class="style-checkbox">
                         {{ s1_form.credit }}
                     </div>
-                    {{ s1_form.credit.errors }}
                 </td>
                 <td>
                 </td>
             </tr>
-
         </table>
     </div>
 
