--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -343,11 +343,12 @@
         </table>
         <a id="add-driver-button" href="#"></a>
     </div>
-    <input type="submit" value="Рассчитать"/>
+
+    <input id="calculate-button" type="image" value="" src="/static/images/calculate_button.png"/>
     </form>
 
     <br/>
-    <a href="{% url cleansession %}">очистить сессию (для тестов)</a>
+        <a href="{% url cleansession %}">очистить сессию (для тестов)</a>
     </div>
 
     <div id="tabs-2">осаго</div>
