сообщение для стоимости перенесено в другую ячейку

--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2366,6 +2366,12 @@ div.messages li {
     margin: 100px 0 136px 0;
 }
 
+#calc-tabs #stoim{
+    font-weight: bold;
+    font-size: 12px;
+}
+
+
 /*Transfrom Elements Styles*/
 .long-select select{
     width: 900px;
