Ссылка со старого калькулятора переключена на новую версию

--- a/insurance/templates/includes/header.html
+++ b/insurance/templates/includes/header.html
@@ -22,7 +22,7 @@
     </div>
 
     <div id="head-buttons">
-        <a href="{% url calc_page %}" id="calc-link"><img src="{{ STATIC_URL }}images/calc_icon.png" alt="" /></a>
+        <a href="{% url ncalc_step1 %}" id="calc-link"><img src="{{ STATIC_URL }}images/calc_icon.png" alt="" /></a>
         <a href="#" id="wallet-link"><img src="{{ STATIC_URL }}images/wallet_icon.png" alt="" /></a>
 
         <div id="account-link">
