--- a/insurance/templates/base.html
+++ b/insurance/templates/base.html
@@ -14,7 +14,20 @@
     <script src="{{ STATIC_URL }}js/jquery.ui.widget.js"></script>
     <script src="{{ STATIC_URL }}js/jquery.ui.mouse.js"></script>
     <script src="{{ STATIC_URL }}js/jquery.ui.slider.js"></script>
-
+   
+   <script>
+   	$(document).ready(function() {
+   		$("a[rel]").overlay({
+            // some mask tweaks suitable for modal dialogs
+            mask: {
+                color: '#ebecff',
+                loadSpeed: 200,
+                opacity: 0.9
+            },
+            closeOnClick: true
+           });
+   	});
+   </script>
 
     {% endblock %}
     {% block extra_head %}
