спрятан настоящий инпут текст, и поставлен спан, поскольку с отключенным инпутом не передаются значения

--- a/insurance/templates/calc/step1.html
+++ b/insurance/templates/calc/step1.html
@@ -88,11 +88,12 @@
                      <span class="table-error">{{ s1_form.price.errors }}</span>
                 </td>
                 <td class="second">
-                    {{ s1_form.price }}
+                    <span id="price-label"></span>
                     <div id="price-slider"></div>
                 </td>
                 <td>
                     <span id="stoim"></span>
+                    {{ s1_form.price }}
                 </td>
             </tr>
             <tr>
