--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2329,6 +2329,15 @@ div.messages li {
     position: relative;
 }
 
+#calc-tabs span#price-label{
+    display: block;
+    width: 125px;
+    height: 20px;
+    border: 1px solid #501c07;
+    color: #676767;
+    padding-left: 5px;
+}
+
 /*First Driver*/
 #calc-tabs #info-main-driver{
     font-size: 18px;
