--- a/insurance/static/css/style.css
+++ b/insurance/static/css/style.css
@@ -2336,7 +2336,7 @@ div.messages li {
     height: 20px;
     border: 1px solid #501c07;
     color: #676767;
-    padding-left: 5px;
+    padding: 3px 0 0 5px;
 }
 
 /*First Driver*/
